# Launch

./: .env.example  .gitignore  Anchor.toml  CLEANUP_SUMMARY.md  CURRENT_STATUS_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOY_INSTRUCTIONS.md  FIRST_CAMPAIGN_GUIDE.md  JUPITER_INTEGRATION.md  POST_DEPLOYMENT_AUDIT_REPORT.md  PROJECT_AUDIT_REPORT.md  README.md  TESTING_GUIDE.md  TEST_MODE_DEBUG_REPORT.md  deploy.sh  next.config.js  package-lock.json  package.json  standalone-campaign.tsx  tsconfig.json  tsconfig.tsbuildinfo
components/: AccessKeyMinting.tsx  AdvancedPriceChart.tsx  AirdropTaskDashboard.tsx  AirdropTaskSetup.tsx  BondingCurveInfo.tsx  CampaignCard.tsx  CampaignList.tsx  ClientWalletButton.tsx  CreateCampaign.tsx  CreateCampaign.tsx.disabled  CreatorFundingDashboard.tsx  DEXPoolViewer.tsx  DataCleaner.tsx  ErrorDisplay.tsx  GlobalActivityFeed.tsx  GraduationManager.tsx  GraduationProgress.tsx  InfoTooltip.tsx  InstagramGate.tsx  InstagramRepostVerification.tsx  LiveTransactionFeed.tsx  MarketDepth.tsx  MyAccessKeys.tsx  PaymentModal.tsx  PlatformStats.tsx  PriceChart.tsx  ProjectScriptAccess.tsx  RealGraduationManager.tsx  RealPriceChart.tsx  RoadmapProgress.tsx  RoadmapSetup.tsx  SimplePriceChart.tsx  SimpleWalletButton.tsx  SocialConnections.tsx  TaskRewardSystem.tsx  TaskSubmissionModal.tsx  TradingDashboard.tsx  TradingPanel.tsx  TradingViewChart.tsx  UserPortfolio.tsx  (+1 more)
lib/: airdropTokenDistribution.ts  bondingCurve.ts  campaignStorage.ts  claimCodeSystem.ts  creatorFundingPools.ts  (+22 more)
programs/launch_fund/: Cargo.toml
programs/launch_fund/src/: lib.rs
(+52 files in other folders)
