[package]
name = "launch_fund"
version = "0.1.0"
description = "Crowdfunding platform with bonding curves on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launch_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"